azurerm - easy to use Python library for Azure Resource Manager
Easy to use Python library for Azure Resource Manager deployment model.
Emphasis is on simplicity and ease of use over completeness of API.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,18 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+# Compiled python modules.
+*.pyc
+
+# cache folder
+azurerm/__pycache__/
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+
 # Windows Installer files
 *.cab
 *.msi
