Adding Sphinx/Napolean docs tools

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ Desktop.ini
 # pypi upload file
 pyupload.bat
 
+# docs build files
+/docs/_build/doctrees/
+/docs/_build/html/_sources
+/docs/_build/html/_static
+*.inv
+
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
